# ra

./: .direnvrc  .dockerignore  .envrc  .gitignore  .gitmodules  .session-progress.md  AGENTS.md  AGENT_TEAM_COMPLETION.md  AGENT_TEAM_COMPLETION_REPORT.md  AGENT_TEAM_PLAN.md  BENCHMARK_SYSTEM_SUMMARY.md  BUILD_SUCCESS_REPORT.md  BUILD_VERIFICATION_COMPLETE.md  CAST_SUPPORT_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPILATION_FIX_SUMMARY.md  COMPLETION_SUMMARY.md  COMPLEXITY_BENEFIT_RANGE_INVESTIGATION.md  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  COVERAGE_PROGRESS_TRACK_C.md  COVERAGE_REPORT.md  CROSS_DATABASE_RULE_COMPARISON.md  Cargo.toml  ChangeLog  DATABASE_MINING_SUMMARY.md  DATABASE_POOL_OPTIMIZATION.md  DATABRICKS_FEATURES_SUMMARY.md  DATABRICKS_SPARK_FEATURES_ANALYSIS.md  DEPLOYMENT_READY.md  DISABLED_RULES_ANALYSIS.md  DOCKER_BUILD_FIX.md  DOCKER_BUILD_SUCCESS.md  DOCKER_DEPLOYMENT.md  DOCKER_FIX_TIMELINE.md  DOCUMENTATION_UPDATE.md  DUCKDB_FEATURES_ANALYSIS.md  Dockerfile  (+155 more)
crates/lime-rs/: Cargo.toml
crates/lime-rs/src/: arena.rs  error.rs  lib.rs  parse_session.rs  snapshot.rs  token_table.rs  tokenizer.rs
crates/lime-sys/: Cargo.toml  build.rs  wrapper.h
crates/lime-sys/src/: lib.rs
crates/ra-adapters/: Cargo.toml
crates/ra-adapters/src/: comparison.rs  duckdb.rs  lib.rs  mysql.rs  postgres.rs  sqlite.rs  stoolap.rs  stoolap.rs.orig
crates/ra-adapters/tests/: cross_database_test.rs  duckdb_comparison_test.rs  mysql_comparison_test.rs  postgres_comparison_test.rs  sqlite_test.rs
crates/ra-adaptive/: Cargo.toml
crates/ra-adaptive/src/: batch.rs  cache_adapter.rs  checkpoint.rs  executor.rs  lib.rs  plan_switch.rs  runtime_stats.rs  triggers.rs
crates/ra-advisor/: Cargo.toml
crates/ra-advisor/src/: candidate.rs  cost.rs  lib.rs  workload.rs
crates/ra-bench/: Cargo.toml
crates/ra-bench/benches/: parse_optimize.rs
crates/ra-bench/examples/: cte_single_run.rs  debug_cte.rs  debug_features.rs  measure_cte_variance.rs  measure_neural_model.rs  profile_simple.rs  test_coldstart.rs  test_model_learning.rs  train_model.rs
crates/ra-bench/src/: benchmark_harness.rs  compare.rs  job_benchmark.rs  lib.rs  main.rs  ra_vs_pg.rs  report.rs  report_generator.rs  runner.rs  statistical_analysis.rs  tproc_c.rs  training_collector.rs
crates/ra-bitnet/: Cargo.toml
crates/ra-bitnet/benches/: bitnet_cost.rs
crates/ra-bitnet/src/: lib.rs  quantize.rs  train.rs
crates/ra-bitnet/tests/: costing_effectiveness.rs  integration.rs
crates/ra-cache/: Cargo.toml
crates/ra-cache-impl/: Cargo.toml
crates/ra-cache-impl/src/: eviction.rs  lib.rs  validity.rs
crates/ra-cache/src/: eviction.rs  key.rs  lib.rs  metrics.rs  plan.rs  validity.rs
crates/ra-catalog/: Cargo.toml
crates/ra-catalog/data/: functions.toml
crates/ra-catalog/src/: functions.rs  lib.rs
crates/ra-catalog/tests/: function_integration.rs
crates/ra-cli/: Cargo.toml
crates/ra-cli/src/: cache_commands.rs  cli.rs  config_commands.rs  diff_validator.rs  display.rs  federated_commands.rs  helpers.rs  main.rs  migrate_commands.rs  ml_commands.rs  pg_snapshot_commands.rs  plan_diff.rs  proxy.rs  regression_commands.rs  router.rs  rule_explanations.rs  side_by_side.rs  stats_commands.rs  test_executor.rs  timeline_commands.rs  visualize.rs
crates/ra-cli/templates/: comparison_dashboard_template.html
crates/ra-cli/tests/: cli_integration_test.rs
crates/ra-codegen/: Cargo.toml
crates/ra-codegen/src/: bytecode.rs  cranelift_backend.rs  ir.rs  lib.rs  volcano.rs  wasm.rs
crates/ra-compiler/: Cargo.toml
crates/ra-compiler/src/: analyzer.rs  checker.rs  index.rs  lib.rs  registry.rs
crates/ra-compiler/tests/: proptest_analyzer.rs
crates/ra-config/: Cargo.toml
crates/ra-config/src/: error.rs  lib.rs  loader.rs  model.rs
crates/ra-core/: Cargo.toml
crates/ra-core/src/: algebra.rs  cost.rs  distributed_agg.rs  distribution.rs  document_algebra.rs  expr.rs  facts.rs  facts_staleness_tests.rs  federated.rs  isolation.rs  lib.rs  pattern.rs  physical_properties.rs  precondition.rs  properties.rs  row_pattern.rs  rule.rs  search_types.rs  statistics.rs
crates/ra-core/tests/: distributed_agg_integration.rs  unnest_test.rs
crates/ra-dialect/: Cargo.toml  README.md
crates/ra-dialect/benches/: backend_comparison.rs
crates/ra-dialect/src/: dialect.rs  emitter.rs  error.rs  functions.rs  lib.rs  matrix.rs  translator.rs
crates/ra-dialect/tests/: polyglot_backend.rs
crates/ra-difftest/: Cargo.toml
crates/ra-difftest/src/: lib.rs  main.rs
crates/ra-difftest/tests/: dml.rs
crates/ra-engine/: Cargo.toml  build.rs
crates/ra-engine/benches/: cache_invalidation_bench.rs  differential_timeline.rs  fts_bench.rs  hybrid_bench.rs  hybrid_integration_bench.rs  job_benchmark.rs  lazy_rules_bench.rs  optimizer.rs  perf_framework.rs  plan_cache_bench.rs  resource_budgets.rs  rule_priority_bench.rs  tpch_all22.rs  tpch_distributed.rs  unnest_bench.rs  vector_search_bench.rs
crates/ra-engine/cost_model/: model.toml  tokenizer.json
crates/ra-engine/examples/: count_rules.rs  fts_cost_demo.rs  job_diagnostic.rs  job_profile.rs  job_timing.rs  profile_all_job.rs  profile_job_detailed.rs  profile_job_query.rs  selectivity_estimation.rs  test_left_deep.rs  train_extended.rs  train_model.rs  validate_bayesian_pruning.rs
crates/ra-engine/src/: VECTOR_OPTIMIZATION_LIMITATIONS.md  adaptive_calibration.rs  analysis.rs  appliers.rs  bayesian_pruning.rs  beam_search.rs  cardinality_cost.rs  citus_optimizer.rs  column_pruning.rs  conditions.rs  cost.rs  (+86 more)
crates/ra-grammar-fuzzer/: Cargo.toml
crates/ra-hardware/: Cargo.toml
crates/ra-isolation/: Cargo.toml
crates/ra-metadata/: Cargo.toml
crates/ra-ml/: Cargo.toml
crates/ra-multimodel/: Cargo.toml
crates/ra-parser/: Cargo.toml  build.rs
crates/ra-pg-advisor/: Cargo.toml
crates/ra-pg-extension/: COMPREHENSIVE_FIX.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  METADATA_CACHE.md  README_TIMELINE.md  TESTING.md  pg_ra_planner.control  ra_pg_extension.control
crates/ra-pg-monitor/: Cargo.toml
crates/ra-pg-quic/: Cargo.toml
(+5542 files in other folders)
