[workspace]
resolver = "2"
members = [
    "crates/ra-core",
    "crates/ra-parser",
    "crates/ra-compiler",
    "crates/ra-engine",
    "crates/ra-codegen",
    "crates/ra-dialect",
    "crates/ra-cli",
    "crates/ra-web",
    "crates/ra-wasm",
    "crates/ra-isolation",
    "crates/ra-adaptive",
    "crates/ra-synthesis",
    "crates/ra-discovery",
    "crates/ra-ml",
    "crates/ra-hardware",
    "crates/ra-multimodel",
    "crates/ra-stats",
    "crates/ra-metadata",
    "crates/ra-catalog",
    "crates/ra-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["RA Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gregburd/ra"
homepage = "https://ra-optimizer.org"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parsing
serde_yaml = "0.9"
pulldown-cmark = "0.9"
sqlparser = "0.52"

# Optimization
egg = "0.9"
timely = "0.12"
differential-dataflow = "0.12"

# Code generation
cranelift = "0.110"
cranelift-codegen = "0.110"
cranelift-frontend = "0.110"
cranelift-module = "0.110"
cranelift-native = "0.110"
wasmtime = "25.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
atty = "0.2"
libc = "0.2"

# Web
rocket = { version = "0.5", features = ["json"] }
rocket_ws = "0.1"
tokio = { version = "1", features = ["full"] }

# Testing
proptest = "1.5"
criterion = "0.5"
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"

# Workspace crates
ra-core = { path = "crates/ra-core" }
ra-parser = { path = "crates/ra-parser" }
ra-compiler = { path = "crates/ra-compiler" }
ra-engine = { path = "crates/ra-engine" }
ra-codegen = { path = "crates/ra-codegen" }
ra-dialect = { path = "crates/ra-dialect" }
ra-wasm = { path = "crates/ra-wasm" }
ra-isolation = { path = "crates/ra-isolation" }
ra-adaptive = { path = "crates/ra-adaptive" }
ra-synthesis = { path = "crates/ra-synthesis" }
ra-discovery = { path = "crates/ra-discovery" }
ra-ml = { path = "crates/ra-ml" }
ra-hardware = { path = "crates/ra-hardware" }
ra-multimodel = { path = "crates/ra-multimodel" }
ra-stats = { path = "crates/ra-stats" }
ra-metadata = { path = "crates/ra-metadata" }
ra-catalog = { path = "crates/ra-catalog" }
ra-tui = { path = "crates/ra-tui" }
toml = "0.8"
crossterm = "0.29"
ratatui = "0.30"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Panic prevention
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
# No cheating
allow_attributes = "deny"
# Code hygiene
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Safety
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
# Pedantic relaxations (too noisy)
module_name_repetitions = "allow"
similar_names = "allow"
