[package]
name = "ra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Relational algebra query optimization engine"

[workspace]
resolver = "2"
members = [
    # Core layer (always available)
    "crates/lime-sys",
    "crates/lime-rs",
    "crates/ra-core",
    "crates/ra-parser",
    "crates/ra-compiler",
    "crates/ra-engine",
    "crates/ra-dialect",
    "crates/ra-hardware",
    "crates/ra-stats-advanced",
    "crates/ra-cache-api",
    "crates/ra-sql-parser",
    # CLI layer (research & education)
    "crates/ra-cli",
    "crates/ra-adapters",
    "crates/ra-metadata",
    # Experimental layer (research innovations)
    "crates/ra-ml",
    "crates/ra-cache-impl",
    "crates/ra-adaptive",
    "crates/ra-test-utils",
    "crates/ra-quel-parser",
]
default-members = [
    # Core layer: cargo build builds only these by default
    "crates/lime-sys",
    "crates/lime-rs",
    "crates/ra-core",
    "crates/ra-parser",
    "crates/ra-compiler",
    "crates/ra-engine",
    "crates/ra-dialect",
    "crates/ra-hardware",
    "crates/ra-stats-advanced",
    "crates/ra-cache-api",
    "crates/ra-sql-parser",
]
# Excluded from workspace build (require special setup):
# - ra-pg-extension: requires pg_config and PostgreSQL headers
exclude = [
    "crates/ra-pg-extension",
]

[features]
default = []
# CLI layer: research & educational tooling
cli = [
    "dep:ra-adapters",
    "dep:ra-metadata",
]
# Experimental layer: research innovations
experimental = [
    "dep:ra-ml",
    "dep:ra-cache-impl",
    "dep:ra-adaptive",
    "dep:ra-test-utils",
    "dep:ra-quel-parser",
]
# Build everything
all = ["cli", "experimental"]

[dependencies]
# Core (always linked into the facade)
ra-core = { workspace = true }
ra-parser = { workspace = true }
ra-compiler = { workspace = true }
ra-engine = { workspace = true }
ra-dialect = { workspace = true }
ra-hardware = { workspace = true }
ra-stats = { workspace = true }
ra-cache-api = { workspace = true }
# CLI layer (optional — ra-cli is a binary, build with: cargo build -p ra-cli)
ra-adapters = { workspace = true, optional = true }
ra-metadata = { workspace = true, optional = true }
# Experimental layer (optional)
ra-ml = { workspace = true, optional = true }
ra-cache-impl = { workspace = true, optional = true }
ra-adaptive = { workspace = true, optional = true }
ra-test-utils = { workspace = true, optional = true }
ra-quel-parser = { workspace = true, optional = true }

[dev-dependencies]
ra-test-utils = { workspace = true, features = ["timeline"] }

[lints]
workspace = true

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.88.0"
authors = ["RA Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gregburd/ra"
homepage = "https://ra-optimizer.org"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parsing
serde_yml = "0.0.12"
pulldown-cmark = "0.9"
sqlparser = { package = "ra-sql-parser", path = "crates/ra-sql-parser", version = "0.52" }

# Optimization
egg = "0.11"
timely = "0.12"
differential-dataflow = "0.12"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.6"
colored = "2.1"
libc = "0.2"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }

# Testing
proptest = "1.5"
criterion = "0.5"
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"
chrono = "0.4"

# Utilities
regex = "1.10"

# File formats
parquet = "53.4"

# Random number generation
rand = { version = "0.8", features = ["getrandom"] }

# Workspace crates
ra-core = { path = "crates/ra-core" }
ra-parser = { path = "crates/ra-parser" }
ra-compiler = { path = "crates/ra-compiler" }
ra-engine = { path = "crates/ra-engine" }
ra-dialect = { path = "crates/ra-dialect" }
ra-adaptive = { path = "crates/ra-adaptive" }
ra-ml = { path = "crates/ra-ml" }
ra-hardware = { path = "crates/ra-hardware" }
ra-stats = { package = "ra-stats-advanced", path = "crates/ra-stats-advanced" }
ra-metadata = { path = "crates/ra-metadata" }
ra-cache-api = { path = "crates/ra-cache-api" }
ra-cache-impl = { path = "crates/ra-cache-impl" }
ra-adapters = { path = "crates/ra-adapters" }
ra-test-utils = { path = "crates/ra-test-utils" }
ra-quel-parser = { path = "crates/ra-quel-parser" }
ra-cli = { path = "crates/ra-cli" }
lime-sys = { path = "crates/lime-sys" }
lime-rs = { path = "crates/lime-rs" }
postgres = "0.19"
stoolap = "0.3"
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.bench]
inherits = "release"
debug = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Panic prevention
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
# No cheating
allow_attributes = "deny"
# Code hygiene
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Safety
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
# Pedantic relaxations (too noisy)
module_name_repetitions = "allow"
similar_names = "allow"
# Allow precision loss for statistics (acceptable trade-off)
cast_precision_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
