[package]
name = "lime-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe Rust wrapper over the Lime parser generator (lime-sys)"

[dependencies]
lime-sys = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }

[lints]
workspace = true
