[package]
name = "lime-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw FFI bindings to the Lime parser generator C library"
links = "lime_parser"

[build-dependencies]
cc = "1.2"
bindgen = "0.71"

# Don't inherit workspace lints — this crate contains only
# bindgen-generated FFI code that isn't subject to the project's
# Rust coding standards.
