[package]
name = "ra-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
postgres = ["dep:postgres"]
stoolap = ["dep:stoolap"]

[dependencies]
ra-core = { workspace = true }
ra-stats = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postgres = { workspace = true, optional = true }
stoolap = { workspace = true, optional = true }

[lints]
workspace = true
