[package]
name = "ra-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
duckdb = ["dep:duckdb"]
mysql = ["dep:mysql"]
postgres = ["dep:postgres", "dep:r2d2", "dep:r2d2_postgres"]
sqlite = ["dep:rusqlite", "dep:r2d2", "dep:r2d2_sqlite"]
stoolap = ["dep:stoolap"]

[dependencies]
ra-core = { workspace = true }
ra-stats = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
duckdb = { version = "1.10501", optional = true, features = ["bundled"] }
mysql = { version = "25", optional = true }
postgres = { workspace = true, optional = true }
r2d2 = { version = "0.8", optional = true }
r2d2_postgres = { version = "0.18", optional = true }
r2d2_sqlite = { version = "0.33", optional = true }
rusqlite = { version = "0.39", optional = true, features = ["bundled"] }
stoolap = { workspace = true, optional = true }

[lints]
workspace = true
