[package]
name = "ra-adaptive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Adaptive query execution with runtime reoptimization for ra"

[features]
default = ["timeline"]
timeline = ["ra-stats/timeline"]

[dependencies]
ra-core = { workspace = true }
ra-cache = { workspace = true }
ra-engine = { workspace = true }
ra-hardware = { workspace = true }
ra-parser = { workspace = true }
ra-stats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
