[package]
name = "ra-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Plan cache with LRU/LFU/adaptive eviction and statistics-driven reoptimization"

[dependencies]
ra-core = { workspace = true }
ra-engine = { workspace = true }
ra-hardware = { workspace = true }
ra-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
