[package]
name = "ra-catalog"
description = "Function catalog and metadata for SQL query optimization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
