[package]
name = "ra-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ra-cli"
path = "src/main.rs"

[dependencies]
ra-core = { workspace = true }
ra-parser = { workspace = true }
ra-engine = { workspace = true }
ra-hardware = { workspace = true }
ra-metadata = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
