[package]
name = "ra-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ra-cli"
path = "src/main.rs"

[dependencies]
ra-core = { workspace = true }
ra-cache = { workspace = true }
ra-adaptive = { workspace = true }
ra-config = { workspace = true }
ra-parser = { workspace = true }
ra-engine = { workspace = true }
ra-hardware = { workspace = true }
ra-metadata = { workspace = true }
ra-dialect = { workspace = true }
ra-stats = { workspace = true }
ra-tui = { workspace = true }
ra-pg-monitor = { workspace = true }
ra-regression = { path = "../ra-regression" }
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
walkdir = "2"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
