[package]
name = "ra-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Re-export shim for ra-core::config (preserved for backwards compatibility)"

[dependencies]
ra-core = { workspace = true }

[lints]
workspace = true
