[package]
name = "ra-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
parquet = ["dep:parquet"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parquet = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
serde_yaml = { workspace = true }
parquet = { workspace = true }
tempfile = { workspace = true }
