[package]
name = "ra-dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL dialect translation for cross-database compatibility"

[dependencies]
sqlparser = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
polyglot-sql = { version = "0.2.0", optional = true }

[features]
default = []
polyglot-backend = ["polyglot-sql"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[lints]
workspace = true
