[package]
name = "ra-dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL dialect translation for cross-database compatibility"

[dependencies]
sqlparser = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bigdecimal = { version = "0.4.1", optional = true }
polyglot-sql = { version = "0.2.0", optional = true }

[features]
default = ["polyglot-backend"]
polyglot-backend = ["polyglot-sql"]
bigdecimal = ["dep:bigdecimal", "sqlparser/bigdecimal"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "backend_comparison"
harness = false

[lints]
workspace = true
