[package]
name = "ra-difftest"
version = "0.2.0"
edition = "2021"
description = "Differential testing: Ra planner results vs native PostgreSQL"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
