[package]
name = "ra-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
ra-core = { workspace = true }
ra-hardware = { workspace = true }
ra-metadata = { workspace = true }
ra-ml = { workspace = true }
ra-stats = { workspace = true }
egg = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
timely = { workspace = true }
differential-dataflow = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
serde_yaml = { workspace = true }
walkdir = "2"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
ra-test-utils = { workspace = true }

[[bench]]
name = "optimizer"
harness = false

[[bench]]
name = "resource_budgets"
harness = false

[[bench]]
name = "differential_timeline"
harness = false

[[bench]]
name = "tpch_distributed"
harness = false

[[bench]]
name = "unnest_bench"
harness = false

[[bench]]
name = "tpch_all22"
harness = false

[[bench]]
name = "job_benchmark"
harness = false

[lints]
workspace = true
