[package]
name = "ra-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["metadata", "streaming", "file-discovery"]
metadata = ["ra-metadata"]
streaming = ["timely", "differential-dataflow"]
file-discovery = ["walkdir"]

[dependencies]
anyhow = { workspace = true }
ra-core = { workspace = true }
ra-hardware = { workspace = true }
ra-metadata = { workspace = true, optional = true }
ra-ml = { workspace = true }
sparsemap = { path = "../sparsemap" }
ra-stats = { workspace = true }
egg = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
timely = { workspace = true, optional = true }
differential-dataflow = { workspace = true, optional = true }
toml = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
serde_yaml = { workspace = true }
walkdir = { version = "2", optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
ra-parser = { path = "../ra-parser" }
ra-test-utils = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "optimizer"
harness = false

[[bench]]
name = "resource_budgets"
harness = false

[[bench]]
name = "differential_timeline"
harness = false

[[bench]]
name = "tpch_distributed"
harness = false

[[bench]]
name = "unnest_bench"
harness = false

[[bench]]
name = "tpch_all22"
harness = false

[[bench]]
name = "job_benchmark"
harness = false

[[bench]]
name = "rule_priority_bench"
harness = false

[[bench]]
name = "plan_cache_bench"
harness = false

[[bench]]
name = "cache_invalidation_bench"
harness = false

[lints]
workspace = true
