[package]
name = "ra-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["metadata", "streaming", "file-discovery", "ml"]
metadata = ["ra-metadata"]
streaming = ["timely", "differential-dataflow"]
file-discovery = ["walkdir"]
timeline = ["ra-stats/timeline"]
ml = ["ra-ml"]

[dependencies]
anyhow = { workspace = true }
ra-core = { workspace = true }
ra-hardware = { workspace = true }
ra-metadata = { workspace = true, optional = true }
ra-ml = { workspace = true, optional = true }
ra-bitnet = { workspace = true }
ra-stats = { workspace = true }
egg = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
timely = { workspace = true, optional = true }
differential-dataflow = { workspace = true, optional = true }
toml = { workspace = true }
rand = { workspace = true }
serde_yml = { workspace = true }
walkdir = { version = "2", optional = true }
chrono = { workspace = true }
ra-parser = { path = "../ra-parser" }
regex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
ra-test-utils = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "optimizer"
harness = false

[[bench]]
name = "resource_budgets"
harness = false

[[bench]]
name = "differential_timeline"
harness = false

[[bench]]
name = "tpch_distributed"
harness = false

[[bench]]
name = "unnest_bench"
harness = false

[[bench]]
name = "tpch_all22"
harness = false

[[bench]]
name = "job_benchmark"
harness = false

[[bench]]
name = "rule_priority_bench"
harness = false

[[bench]]
name = "plan_cache_bench"
harness = false

[[bench]]
name = "cache_invalidation_bench"
harness = false

[[bench]]
name = "vector_search_bench"
harness = false

[[bench]]
name = "lazy_rules_bench"
harness = false

[[bench]]
name = "hybrid_bench"
harness = false

[[bench]]
name = "perf_framework"
harness = false

[[bin]]
name = "planner_comparison_runner"
path = "../../benchmarks/planner_comparison/runner.rs"

[lints]
workspace = true
