[package]
name = "ra-grammar-fuzzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Grammar-based property testing for SQL optimizer correctness"

[features]
default = []
# Enable long-duration tests (hours/days of fuzzing)
long-duration-testing = []
# Enable reference optimizer comparison (requires running databases)
reference-comparison = ["dep:postgres", "dep:duckdb"]

[dependencies]
ra-core = { workspace = true }
ra-engine = { workspace = true }
ra-parser = { path = "../ra-parser" }
egg = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
fastrand = "2.0"
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Optional reference optimizer dependencies
postgres = { workspace = true, optional = true }
duckdb = { version = "1.10501", optional = true, features = ["bundled"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lints.clippy]
# Inherit workspace severity but relax pedantic lints for this experimental crate
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
allow_attributes = "deny"
exit = "deny"
mem_forget = "deny"
await_holding_lock = "deny"
large_futures = "deny"
# Relaxed for fuzzer crate
module_name_repetitions = "allow"
similar_names = "allow"
match_same_arms = "allow"
trivially_copy_pass_by_ref = "allow"
unused_self = "allow"
doc_markdown = "allow"
map_unwrap_or = "allow"
format_push_string = "allow"
expect_used = "allow"
