[package]
name = "ra-hardware"
description = "Hardware-aware cost models and operator placement for GPU/FPGA/SIMD acceleration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "hardware_models"
harness = false

[lints]
workspace = true
