[package]
name = "ra-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
postgres = "0.19"
mysql = "28"
rusqlite = { version = "0.39", features = ["bundled"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
